Separate packlist creation and update
